--- a/style.css
+++ b/style.css
@@ -30,9 +30,18 @@ ul{
     }
 }
 
+@keyframes smoothColor {
+    from{
+        filter: grayscale(100);
+    }
+    to{
+        filter:grayscale(0)
+    }
+}
+
 .showIn{
     animation: smoothFade;
-    animation-duration: 4s;
+    animation-duration: 1s;
 }
 
 /* Nav Bar */
@@ -42,6 +51,7 @@ header{
     width: 100vw;
     top: 0;
     left: 0;
+    z-index: 999;
 }
 
 #navBar{
@@ -156,25 +166,55 @@ li > i {
 
 #technologies{
     height: 100vh;
-    display: flex;
-    justify-content: center;
     background-color: rgb(201, 198, 198);
 }
 
 .techContainer{
-    text-align:center;
-    font-size: 1.2rem;
-    padding: 40px 0;
+    padding: 8% 0;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
 }
 
-.cardContainer{
-    padding: 50px 100px;
-    display: flex;
-    flex-wrap: wrap;
+
+.cardContainer {
+    margin: 5% 0;
+    width: 60vw;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    grid-column-gap: 10px;
+    grid-row-gap: 10px;
 }
-  
-img{
-    flex: 1 1 20%;
-    margin: 20px;
-    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+    
+.img1 { grid-area: 1 / 1 / 2 / 2; justify-self: center; }
+.img2 { grid-area: 1 / 2 / 2 / 3; justify-self: center; }
+.img3 { grid-area: 1 / 3 / 2 / 4; justify-self: center; }
+.img4 { grid-area: 2 / 1 / 3 / 2; justify-self: center; }
+.img5 { grid-area: 2 / 2 / 3 / 3; justify-self: center; }
+.img6 { grid-area: 2 / 3 / 3 / 4; justify-self: center; }
+.img7 { grid-area: 3 / 1 / 4 / 2; justify-self: center; }
+.img8 { grid-area: 3 / 2 / 4 / 3; justify-self: center; }
+.img9 { grid-area: 3 / 3 / 4 / 4; justify-self: center; }
+
+.cardContainer > img{
+    filter: grayscale(100);
+}
+
+.cardContainer > img:hover{
+    animation: smoothColor;
+    animation-duration: 1s;
+    filter: none;
+    cursor: pointer;
+}
+
+/* Projects Section */
+
+#projects{
+    font-family: 'Montserrat', sans-serif; 
+    color: rgb(255, 255, 255);
+    width: 100vw;
+    height: 110vh;
 }
