--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ ul {
 
 .showIn {
     animation: smoothFade;
-    animation-duration: 1s;
+    animation-duration: 2s;
 }
 
 /* Nav Bar */
@@ -419,6 +419,7 @@ li>i {
 .fa-linkedin,
 .fa-square-github {
     padding: 0;
+    font-size: 4rem;
 }
 
 .fa-linkedin:hover {
