--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ header {
     padding: 8px 0;
 }
 
-a {
+#navBarLinkList>.btn>a {
     color: aliceblue;
     text-decoration: none;
 }
@@ -78,7 +78,7 @@ a {
 
 #navBarLinkList>.btn {
     width: 150px;
-
+    border: none;
 }
 
 #navBarLinkList>.btn:hover {
@@ -165,16 +165,20 @@ a {
     list-style: none;
     padding: 0;
     margin: 30px 0;
+    align-items: center;
 }
 
-.selfProclaimItem {
+.selfProclaimItem>li {
     list-style: none;
-    margin: 0 20%;
+    margin: 0 25%;
+    display: inline-flex;
+    flex-direction: column;
 }
 
 .selfProclaimItem>li>i {
     padding: 20px 0;
     font-size: 4rem;
+    text-align: center;
 }
 
 
@@ -417,7 +421,7 @@ a {
 #messageButton {
     background-color: #128C7E;
     color: black;
-    border: 2px solid black;
+    border: none;
     height: fit-content;
     align-self: center;
     padding: 4%;
@@ -426,11 +430,12 @@ a {
 
 #messageButton>a {
     color: white;
+    text-decoration: none;
+    font-weight: 600;
 }
 
 #messageButton>a:hover {
     filter: invert(100);
-    font-weight: 600;
 }
 
 /* Footer */
@@ -461,6 +466,10 @@ a {
 #networkLinks>li {
     display: inline-block;
     margin: 20px 5px;
+}
+
+#networkLinks>li>a {
+    text-decoration: none;
     color: aliceblue;
 }
 
@@ -514,6 +523,14 @@ a {
         display: initial;
     }
 
+    .dropdown>.btn>i {
+        font-size: 1.3rem;
+    }
+
+    .dropdown>.btn>i:active {
+        transform: rotate(360);
+    }
+
     .dropdown-menu {
         width: 100vw;
     }
@@ -553,10 +570,12 @@ a {
 
     .selfProclaimList {
         flex-direction: column;
+        align-items: center;
     }
 
-    .selfProclaimItem {
+    .selfProclaimItem>li {
         margin: 10% 0;
+        justify-content: center;
     }
 
     /* technologies Section */
