--- a/style.css
+++ b/style.css
@@ -127,6 +127,7 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: #16182c;
 }
 
 .container {
@@ -138,7 +139,9 @@ header {
     height: fit-content;
     text-align: center;
     font-size: 1.3rem;
-    padding: 10%;
+    padding: 8%;
+    color: aliceblue;
+    text-shadow: 4px 4px black;
 }
 
 #aboutMe>.container>p>a {
@@ -147,7 +150,7 @@ header {
 }
 
 .profilePic {
-    border: black solid 4px;
+    border: 2px solid black;
     border-radius: 50%;
     margin: 20px 0;
 }
@@ -158,6 +161,8 @@ header {
     background-color: rgb(201, 198, 198);
     border: solid 2px black;
     border-radius: 4px;
+    text-shadow: none;
+    color: black;
 }
 
 .selfProclaimList {
@@ -295,9 +300,7 @@ header {
 #projects {
     text-align: center;
     font-family: 'Montserrat', sans-serif;
-    background-image: url(./images/laptop.jpg);
-    background-size: cover;
-    filter: sepia(40%);
+    background-color: #16182c;
     width: 100vw;
     display: flex;
     flex-direction: column;
@@ -384,6 +387,10 @@ header {
     width: 100%;
     height: 100%;
     object-fit: cover
+}
+
+a>img {
+    object-fit: cover;
 }
 
 
