fixing home layout and working in responsive design

--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -11,6 +11,6 @@
       </div>
     </nav>  -->
     <div class="flex">
-        <p>Copyright © 2023 - Made with <i class="fa-solid fa-heart" style="color: #e01f1f;"></i> @Rdvid</p>
+        <p>Copyright © 2023 - Made with <i class="fa-solid fa-heart" style="color: #e01f1f;"></i> @rdvid</p>
     </div>
 </footer>
