--- a/src/components/playlist.astro
+++ b/src/components/playlist.astro
@@ -1,11 +1,5 @@
 ---
 
-const response = await fetch('https://randomuser.me/api/');
-const data = await response.json();
-const randomUser = data.results[0];
-
-// ea6cc4932d444a17818a4e58752be6a5
-
 ---
 
 <article class="bg-base-100">
@@ -14,96 +8,14 @@ const randomUser = data.results[0];
         <div class="card m-10 bg-black drop-shadow-lg">
             <ul class="flex flex-col">
                 <p class="px-8 py-3 text-end text-blue font-bold text-[#2e763a]">play on <i class="fa-brands fa-spotify" style="color: #2e763a;"></i></p>
-                <li class="flex p-8 py-0">
-                    <div class="avatar">
-                        <div class="w-16 rounded">
-                            <img src="https://i.scdn.co/image/ab67616d00001e023cf4066969a3e999b884f678" alt="The Sweet Kill" />
-                        </div>
-                    </div>
-                    <div class="px-2 flex flex-col justify-center">
-                        <h4 class="font-bold">Rain</h4>
-                        <p>The Sweet Kill</p>
-                    </div>
-                </li>
-                <div class="flex flex-col w-full bg-black"> 
-                    <div class="divider m-2 py-2"></div> 
-                </div>
-                <li class="flex px-8 py-0">
-                    <div class="avatar">
-                        <div class="w-16 rounded">
-                            <img src="https://i.scdn.co/image/ab67616d00001e023d54a30e59638f60f56dd4e6" alt="Mareux" />
-                        </div>
-                    </div>
-                    <div class="px-2 flex flex-col justify-center">
-                        <h4 class="font-bold">The Perfect Girl</h4>
-                        <p class="">Mareux</p>
-                    </div>
-                </li>
-                <div class="flex flex-col w-full bg-black"> 
-                    <div class="divider m-2 py-2"></div> 
-                </div>
-                <li class="flex px-8 py-0">
-                    <div class="avatar">
-                        <div class="w-16 rounded">
-                            <img src="https://i.scdn.co/image/ab67616d00001e0242486337c11ac28cbd7e9ae3" alt="Terno Rei" />
-                        </div>
-                    </div>
-                    <div class="px-2 flex flex-col justify-center">
-                        <h4 class="font-bold">Yoko</h4>
-                        <p class="">Terno Rei</p>
-                    </div>
-                </li>
-                <div class="flex flex-col w-full bg-black"> 
-                    <div class="divider m-2 py-2"></div> 
-                </div>
-                <li class="flex px-8 py-0">
-                    <div class="avatar">
-                        <div class="w-16 rounded">
-                            <img src="https://i.scdn.co/image/ab67616d00001e027f89eb18e64f268561d81c42" alt="Florence + The Machine" />
-                        </div>
-                    </div>
-                    <div class="px-2 flex flex-col justify-center">
-                        <h4 class="font-bold">Which Witch</h4>
-                        <p class="">Florence + The Machine</p>
-                    </div>
-                </li>
-                <div class="flex flex-col w-full bg-black"> 
-                    <div class="divider m-2 py-2"></div> 
-                </div>
-                <li class="flex px-8 py-0">
-                    <div class="avatar">
-                        <div class="w-16 rounded">
-                            <img src="https://i.scdn.co/image/ab67616d00001e020924b9c6232d2348d4efa0dc" alt="The Marias" />
-                        </div>
-                    </div>
-                    <div class="px-2 flex flex-col justify-center">
-                        <h4 class="font-bold">Only in My Dreams</h4>
-                        <p class="">The Marias</p>
-                    </div>
-                </li>
-                <div class="flex flex-col w-full bg-black"> 
-                    <div class="divider m-2 py-2"></div> 
-                </div>
-                <li class="flex p-8 pt-0">
-                    <div class="avatar">
-                        <div class="w-16 rounded">
-                            <img src="https://i.scdn.co/image/ab67616d00001e02b13b4a434585f484548e42c9" alt="Kali Uchis" />
-                        </div>
-                    </div>
-                    <div class="px-2 flex flex-col justify-center">
-                        <h4 class="font-bold">Moonlight</h4>
-                        <p class="">Kali Uchis</p>
-                    </div>
-                </li>
+                <!-- insert microsservice logic here -->
             </ul>
         </div>
     </div>
 </article>
 
 <style>
-    .card{
-        color: #f2f2f2;
-    }
-
-
 </style>
+
+<script>
+</script>
