--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -4,25 +4,25 @@ import Footer from "../components/footer.astro"
 import Sidebar from "../components/sidebar.astro"
 ---
 
-<html lang="en" data-theme="lofi" class="h-full">
+<html lang="en" data-theme="lofi" class="min-h-full max-lg:min-w-fit lg:h-full">
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
 		<script src="https://kit.fontawesome.com/6b3a9e549b.js" crossorigin="anonymous" defer></script>
-		<title>[ Rdvid ]</title>
+		<title>< rdvid /></title>
 	</head>
-	<body class="h-full">
+
+	<body class="min-h-full max-md:max-h-screen lg:h-full" onload="typeWriter()">
         <Header />
-        <div class="flex flex-col lg:flex-row my-5 h-full">
-            <div class="divider lg:divider-horizontal"></div> 
+        <div class="flex flex-col lg:flex-row h-4/5 items-center">
             <Sidebar />
-            <div class="divider lg:divider-horizontal"></div> 
-            <div class="w-full">
+            <div class="w-full pt-6 pr-6 pl-2 bg-base-100 h-full">
                 <slot />
             </div>
         </div>   
         <Footer/ >
 	</body>
+    
 </html>
