--- a/src/pages/home-2.astro
+++ b/src/pages/home-2.astro
@@ -8,7 +8,7 @@ const t = useTranslations(lang);
 <section>
   <div class="hero bg-base-200 p-2">
     <div class="hero-content flex-col lg:flex-row">
-      <img src="/code-hero-background.jpg" class="max-w-sm rounded-lg shadow-2xl" />
+      <img src="/code-hero-background.jpg" class="w-fit sm:max-w-sm rounded-lg shadow-2xl" />
       <div>
         <p id="placeholder" class="hidden">{t('home.title')}</p>
         <h1 id="home-title" class="text-5xl font-bold text-center"></h1>
