--- a/src/pages/home-2.astro
+++ b/src/pages/home-2.astro
@@ -1,4 +1,5 @@
 ---
+import Playlist from '../components/playlist.astro';
 import { getLangFromUrl, useTranslations } from '../utils/utils';
 
 const lang = getLangFromUrl(Astro.url);
